# protolink

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  ruff.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  docs.yml  lint.yml
agent/: index.html
agents/: index.html
client/: index.html
concept/: index.html
docs/: agent.md  agents.md  concept.md  examples.md  getting-started.md  index.md  llm.md  llms.md  models.md  registry.md  relevant.md  server.md  tools.md  transport.md  transports.md  types.md
examples/: README.md  basic_agent.py  client_example.py  echo_agent.py  http_agents.py  http_math_agents.py  index.html  llms.py  multi_agent.py  oauth_agent.py  registry.py  runtime_agents.py  streaming_agent.py  task_processor_agent.py
examples/notebooks/agent_registry_test/: aler_agent.ipynb  alert_agent.ipynb  registry.ipynb  weather_agent.ipynb
examples/notebooks/basic_example/: README.md  alert_agent.ipynb  registry.ipynb  weather_agent.ipynb
examples/notebooks/llm_test/: api_llms.ipynb
getting-started/: index.html
llm/: index.html
llms/: index.html
models/: index.html
protolink/: __init__.py
protolink/agent/: __init__.py  agent.py
protolink/agents/: base.py
protolink/client/: __init__.py  agent_client.py  registry_client.py
protolink/core/: __init__.py  agent.py  agent_card.py  agent_handler.py  artifact.py  context.py  endpoint_handler.py  message.py  part.py  protocol.py  task.py
protolink/discovery/: __init__.py  registry.py
protolink/llms/: base.py
protolink/llms/api/: anthropic_client.py  base.py  openai_client.py
protolink/llms/server/: base.py  ollama_client.py
protolink/models/: __init.py  __init__.py
protolink/security/: __init__.py  auth.py  crypto.py  middleware.py
protolink/server/: agent.py  agent_server.py  registry.py
protolink/tools/: __init__.py  base.py  mcp_adapter.py  tool.py
protolink/transport/: __init__.py  base.py  http.py  http_transport.py  json_rpc_transport.py  runtime_transport.py  transport.py  websocket.py  websocket_transport.py
protolink/transport/agent/: __init__.py  http_transport.py  json_rpc_transport.py  runtime_transport.py  websocket_transport.py
protolink/transport/agent/backends/: base.py  fastapi.py  starlette.py
protolink/transport/backends/: base.py  fastapi.py  starlette.py
protolink/transport/registry/: __init__.py  base.py  http_transport.py
protolink/transport/registry/backends/: starlette.py
protolink/types/: __init__.py  types.py
protolink/utils/: __init__.py  id_generator.py  inspect.py  logging_utils.py  renderers.py  serialization.py  validators.py
registry/: index.html
relevant/: index.html
search/: search_index.json
server/: index.html
tests/: conftest.py  test_agent.py  test_agent_card.py  test_examples.py  test_registry.py
tests/e2e/: test_protolink_flow.py
tests/integration/: test_agent_registry.py
tests/unit/: test_models.py  test_security.py  test_transport.py
tool/: index.html
tools/: index.html
transport/: index.html
transports/: index.html
types/: index.html
