[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protolink"
version = "0.1.0"
description = "A framework for building and managing agents based on the A2A protocol."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Nikolaos Maroulis", email = "nikolaos@maroulis.dev"},
]
dependencies = [
    # Core dependencies go here
]

[project.optional-dependencies]
http = [
    "httpx>=0.28.1",
]

llms = [
    "anthropic>=0.72.0",
    "llama-cpp-python>=0.3.16",
    "openai>=2.2.0",
]

test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
]

# All optional dependencies
all = [
    "httpx>=0.28.1",
    "anthropic>=0.72.0",
    "llama-cpp-python>=0.3.16",
    "openai>=2.2.0",
]

[tool.ruff]
# Enable all available rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "FBT", # flake8-boolean-trap
    "Q",   # flake8-quotes
    "RUF", # ruff-specific rules
]

# Allow autofix for all rules
extend-fixable = ["ALL"]

# Line length (matches black)
line-length = 88

# Exclude common directories
exclude = [
    ".git",
    ".github",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"

[tool.coverage.run]
source = ["protolink"]
omit = ["tests/*"]
