[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protolink"
version = "0.1.0"
description = "A framework for building and managing agents based on the A2A protocol."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Nikolaos Maroulis", email = "nikolaos@maroulis.dev"},
]
dependencies = []

[project.optional-dependencies]
http = [
    "httpx>=0.28.1",
]

llms = [
    "anthropic>=0.72.0",
    "llama-cpp-python>=0.3.16",
    "openai>=2.2.0",
]

test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
    "ruff==0.14.4",
]

# All optional dependencies
all = [
    "httpx>=0.28.1",
    "anthropic>=0.72.0",
    "llama-cpp-python>=0.3.16",
    "openai>=2.2.0",
]

dev = [
    "httpx>=0.28.1",
    "anthropic>=0.72.0",
    "llama-cpp-python>=0.3.16",
    "openai>=2.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
    "ruff==0.14.4",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"

[tool.coverage.run]
source = ["protolink"]
omit = ["tests/*"]
